[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/characters/Character.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/CharacterControls.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/ground_circle.atlastex" type="Texture" id=3]
[ext_resource path="res://scenes/effects/KickbackTween.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/characters/char_frames_1.tres" type="SpriteFrames" id=5]
[ext_resource path="res://scenes/characters/CharacterAI.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/lucasarts-scumm-outline.fnt" type="BitmapFont" id=7]
[ext_resource path="res://grey_style.tres" type="StyleBox" id=8]
[ext_resource path="res://scenes/characters/CharacterSensors.gd" type="Script" id=9]
[ext_resource path="res://scenes/effects/DeathTween.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/characters/CharacterInventory.gd" type="Script" id=11]
[ext_resource path="res://assets/items/heart_shaded.png" type="Texture" id=12]
[ext_resource path="res://scenes/characters/ai/Conditions.gd" type="Script" id=13]
[ext_resource path="res://scenes/characters/ai/Actions.gd" type="Script" id=14]
[ext_resource path="res://scenes/characters/CharacterMemory.gd" type="Script" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 8.0

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Conditions" type="Node" parent="AI"]
script = ExtResource( 13 )

[node name="Actions" type="Node" parent="AI"]
script = ExtResource( 14 )

[node name="Memory" type="Node2D" parent="AI"]
script = ExtResource( 15 )

[node name="Sensors" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Sight" type="Area2D" parent="Sensors"]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 26

[node name="Circle" type="CollisionShape2D" parent="Sensors/Sight"]
shape = SubResource( 2 )

[node name="Controls" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="WorldIcons" type="Node2D" parent="Controls"]
visible = false

[node name="Target" type="Node2D" parent="Controls/WorldIcons"]
modulate = Color( 0.968627, 1, 0, 1 )

[node name="Line2D" type="Line2D" parent="Controls/WorldIcons/Target"]
points = PoolVector2Array( 10, 0, 0, 5, -10, 0, 0, -5, 10, 0 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Path" type="Line2D" parent="Controls/WorldIcons"]
width = 2.0
default_color = Color( 0.968627, 1, 0, 1 )

[node name="Inventory" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Shape" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = ExtResource( 5 )
animation = "walk_down"

[node name="KickbackTween" parent="Shape" instance=ExtResource( 4 )]
duration = 0.05
strength = 5.0

[node name="DeathTween" parent="Shape" instance=ExtResource( 10 )]
duration = 0.1

[node name="Picker" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0

[node name="Circle" type="CollisionShape2D" parent="Picker"]
position = Vector2( 0, -15 )
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
input_pickable = false
collision_layer = 4
collision_mask = 0

[node name="Circle" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -15 )
shape = SubResource( 4 )

[node name="Icons" type="Node2D" parent="."]
z_index = 100

[node name="Name" type="Label" parent="Icons"]
visible = false
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = -36.0
text = "Name"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaking" type="Label" parent="Icons"]
margin_left = 15.0
margin_top = -30.0
margin_right = 215.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 7 )
text = "I'm saying something..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakingTimer" type="Timer" parent="Icons/Speaking"]

[node name="Selected" type="Sprite" parent="Icons"]
visible = false
modulate = Color( 1, 0, 1, 1 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Hover" type="Sprite" parent="Icons"]
visible = false
position = Vector2( 0, -2 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopPanel" type="MarginContainer" parent="UI"]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.08
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="UI/TopPanel"]
margin_right = 182.0
margin_bottom = 38.0

[node name="HealthBar" type="TextureRect" parent="UI/TopPanel/VBox"]
margin_right = 100.0
margin_bottom = 9.0
rect_min_size = Vector2( 100, 9 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="Inventory" type="HBoxContainer" parent="UI/TopPanel/VBox"]
margin_top = 13.0
margin_right = 182.0
margin_bottom = 38.0
size_flags_vertical = 3

[node name="Panel_0" type="Panel" parent="UI/TopPanel/VBox/Inventory"]
margin_right = 33.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/VBox/Inventory/Panel_0"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_1" type="Panel" parent="UI/TopPanel/VBox/Inventory"]
margin_left = 37.0
margin_right = 70.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/VBox/Inventory/Panel_1"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_2" type="Panel" parent="UI/TopPanel/VBox/Inventory"]
margin_left = 74.0
margin_right = 107.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/VBox/Inventory/Panel_2"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_3" type="Panel" parent="UI/TopPanel/VBox/Inventory"]
margin_left = 111.0
margin_right = 144.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/VBox/Inventory/Panel_3"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_4" type="Panel" parent="UI/TopPanel/VBox/Inventory"]
margin_left = 148.0
margin_right = 182.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="UI/TopPanel/VBox/Inventory/Panel_4"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel" type="MarginContainer" parent="UI"]
visible = false
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 20.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="UI/DebugPanel"]
margin_right = 278.0
margin_bottom = 275.0
size_flags_vertical = 1
custom_styles/normal = ExtResource( 8 )
text = "DEBUG INFO"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Picker" to="." method="_on_Picker_area_entered"]
[connection signal="area_exited" from="Picker" to="." method="_on_Picker_area_exited"]
[connection signal="timeout" from="Icons/Speaking/SpeakingTimer" to="." method="_on_SpeakingTimer_timeout"]
